# LEARN_CUDA_C_PROG

./: README.md
chp1/: hello  hello.cu
chp1/chp1_test/: CMakeLists.txt
chp1/test_clion/: CMakeLists.txt  hello  hello.cu
chp2/a10_sumMatrix_1d_retry/: CMakeLists.txt  main.cu
chp2/a11_sumMatrix_mix/: CMakeLists.txt  main  main.cu
chp2/a12_device_management/: CMakeLists.txt  main.cu
chp2/a1_sum_array/: CMakeLists.txt  main.cu
chp2/a2_check_index/: CMakeLists.txt  main.cu
chp2/a3_define_grid_block/: CMakeLists.txt  main.cu
chp2/a4_sum_array_on_gpu/: CMakeLists.txt  addvector  main  main.cu
chp2/a5_review_sum_array_on_gpu/: CMakeLists.txt  main  main.cu
chp2/a6_matrix/: CMakeLists.txt  main.cu
chp2/a7_sumMatrix/: CMakeLists.txt  main  main.cu
chp2/a8_test_gpuinit/: CMakeLists.txt  main  main.cu
chp2/a9_sumMatrix_1d/: CMakeLists.txt  main  main.cu
chp2/del_fake_shadow/: CMakeLists.txt  main.cu
chp3/b1_divergence/: CMakeLists.txt  main  main.cu
chp3/b2_simple_query/: CMakeLists.txt  main.cu
chp3/b3_sum_matrix_gpu2d/: CMakeLists.txt  main  main.cu
chp3/b4_reduce_integer/: CMakeLists.txt  main.cu
chp3/b5_reduces/: CMakeLists.txt  main  main.cu
common/: common.h
review_chp2/a1_cpu_sum_array/: CMakeLists.txt  main.c
review_chp2/a2_check_dimension/: CMakeLists.txt  main.cu
review_chp2/a3_define_grid_block/: CMakeLists.txt  main.cu
review_chp2/a4_sum_array_on_gpu_small_case/: CMakeLists.txt  main  main.cu
review_chp2/a5_check_threadidx/: CMakeLists.txt  main.cu
review_chp2/a8_sum_matrix_gpumix/: CMakeLists.txt  main.cu
(+6 files in other folders)
